--- a/my-app/Jenkinsfile
+++ b/my-app/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent {
         docker {
-            image 'node:13.12.0-alpine'
+            image 'node:14'
             args '-p 3000:3000'
         }
     }
