--- a/my-app/Jenkinsfile
+++ b/my-app/Jenkinsfile
@@ -7,11 +7,14 @@ pipeline {
     }
     environment {
         CI = 'true'
+        HOME = '.'
     }
     stages {
         stage('Build') {
             steps {
                 sh 'npm install'
+                sh 'pwd'
+                sh 'dir'
             }
         }
         stage('Test') {
