--- a/my-app/Jenkinsfile
+++ b/my-app/Jenkinsfile
@@ -7,11 +7,12 @@ pipeline {
     }
     environment {
         CI = 'true'
-        HOME = 'my-app'
+        HOME = '.'
     }
     stages {
         stage('Build') {
             steps {
+                sh 'cd my-app'
                 sh 'npm install'
                 sh 'pwd'
                 sh 'dir'
